other details fixed to improve code-readability

--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -23,10 +23,6 @@ small {
     font-weight: lighter;
 }
 
-.d-none {
-    display: none!important;
-}
-
 .bold {
     font-weight: bold!important;
 }
